--- a/styles/style.css
+++ b/styles/style.css
@@ -720,6 +720,11 @@ button.carousel-control-next {
     line-height: 42px;
 }
 
+.infoPadJ {
+    padding-top: 50px;
+    padding-bottom: 100px;
+}
+
 .redJ {
     color: red;
 }
@@ -734,6 +739,32 @@ button.carousel-control-next {
     margin-top: -5px;
 }
 
+.mobileInfoJ {
+    width: 200px;
+    margin-bottom: 0px;
+}
+
+.mobileHr {
+    margin-top: 5px;
+    margin-bottom: 2px;
+    border-top: 1.5px solid black;
+    opacity: 100%;
+    width: 250px;
+}
+
+.learnMorePad {
+    padding-top: 75px;
+}
+
+.mobileInfoHeaderJ {
+    font-size: 24px;
+}
+
+.mobileInfoTxt {
+    font-size: 20;
+    line-height: 35px;
+}
+
 .blueJ2 {
     font-size: 28px;
     padding-top: 25px;
@@ -745,7 +776,10 @@ button.carousel-control-next {
     padding-top: 20px;
 }
 
-
+.mobileArrowsJ {
+    width: 0px;
+    height: 0px;
+}
 
 .banhMiHeadJ {
     padding-left: 25px;
@@ -857,6 +891,14 @@ button.carousel-control-next {
     z-index: 1;
 }
 
+.show {
+    position: absolute;
+    z-index: 1;
+    background-color: black;
+    top: 90px;
+    width: 100%;
+}
+
 .hrMargin {
     margin-top: 35px;
 }
@@ -917,10 +959,10 @@ button.carousel-control-next {
         line-height: 30px;
         width: 310px;
     }
-    
+
     .carouselHeightJ {
     height: 400px;
-}
+    }
 
     .aLittleAboutJ2Div {
         width: 95vw;
@@ -989,6 +1031,14 @@ button.carousel-control-next {
         height: 0px;
     }
 
+    .infoPadJ {
+        padding-bottom: 30px;
+    }
+
+    .learnMorePad {
+        padding-top: 25px;
+    }
+
     .contactBgJ {
         background-image: url();
     }
@@ -1049,7 +1099,15 @@ button.carousel-control-next {
         height: 41px;
     }
 
+    .mobileArrowsJ {
+        width: 28px;
+        height: 30px;
+    }
 
+    .viewSandwichesBtn {
+        width: 230px;
+        height: 43px;
+    }
 
     .blueJ2 {
         font-size: 20px;
