--- a/styles/style.css
+++ b/styles/style.css
@@ -338,8 +338,9 @@ hr {
 
 .viewSandwichesBtn {
     font-weight: 600;
-    width: 250px;
+    width: 290px;
     border-radius: 15px;
+    font-size: 24px;
 }
 
 .viewSandwichPad {
@@ -455,7 +456,9 @@ hr {
 }
 
 .dotsJ {
-    width: 45px;
+    width: 35px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .reviewPaddingJ {
@@ -488,8 +491,8 @@ hr {
 }
 
 .footerPaddingJ {
-    padding-left: 60px;
-    padding-right: 60px;
+    padding-left: 1vw;
+    padding-right: 1vw;
 }
 
 .videoJ {
@@ -910,7 +913,7 @@ button.carousel-control-next {
 }
 
 .hrMargin {
-    margin-top: 35px;
+    margin-top: 40px;
 }
 
 .navbar-toggler-icon {
@@ -1141,6 +1144,7 @@ button.carousel-control-next {
     .viewSandwichesBtn {
         width: 240px;
         height: 43px;
+        font-size: 16px;
     }
 
     .blueJ2 {
