--- a/styles/style.css
+++ b/styles/style.css
@@ -506,6 +506,10 @@ hr {
     padding-bottom: 75px;
 }
 
+.homehrMargin {
+    margin-top: 45px;
+}
+
 .phoneJ {
     width: 100%;
     height: 373px;
