--- a/styles/style.css
+++ b/styles/style.css
@@ -1367,6 +1367,7 @@ button.carousel-control-next {
     .blueJ {
         font-size: 20px;
         padding-top: 10px;
+        text-decoration: none;
     }
 
     .disappearJ {
