--- a/styles/style.css
+++ b/styles/style.css
@@ -49,7 +49,7 @@ body {
 
 .hovers:hover {
     width: 100%;
-    height: 40%
+    height: 40%;
 }
 
 .bgWhite {
@@ -727,11 +727,14 @@ hr {
 
 .hover2 {
     width: 100%;
+    object-fit: cover;
+    transition: 1s ease;
 }
 
 .hover2:hover {
-    width: 18vw;
-    height: 12vw;
+    width: 120%;
+    height: 120%;
+    transition: 1s ease;
 }
 
 .lineHeight30 {
@@ -1048,8 +1051,8 @@ button.carousel-control-next {
 }
 
 .contactPaddingJ {
-    padding-top: 5px;
-    padding-bottom: 10px;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
 
 .orderTextJ {
@@ -1087,12 +1090,15 @@ button.carousel-control-next {
 }
 
 .hover:hover {
-    height: 10vw;
-    width: 50vw;
+    height: 120%;
+    width: 120%;
+    transition: 1s ease;
 }
 
 .hover {
     width: 100%;
+    transition: 1s ease;
+    object-fit: cover;
 }
 
 .rightJ {
